fail_crate/tests/wrong_type_after_rename.rs
use inew::New;

#[derive(New)]
#[new(rename = true)]
struct A;

fn main() {}
